--- a/src/SelectionBar.css
+++ b/src/SelectionBar.css
@@ -9,6 +9,7 @@
 .run_button {
   float: left;
   padding-left: 3%;
+  margin-right: 1%;
   box-shadow: inset 0px 1px 0px 0px #bee2f9;
   background: linear-gradient(to bottom, #d9dde0 5%, #47a4cf 100%);
   background-color: #d9dde0;
@@ -28,6 +29,31 @@
   background-color: #47a4cf;
 }
 .run_button:active {
+  position: relative;
+  top: 1px;
+}
+.clear_button {
+  float: left;
+
+  box-shadow: inset 0px 1px 0px 0px #bee2f9;
+  background: linear-gradient(to bottom, #d9dde0 5%, #47cf69 100%);
+  background-color: #d9dde0;
+  border: 2px solid green;
+  /* display:inline-block; */
+  cursor: pointer;
+  color: darkgreen;
+  font-family: Trebuchet MS;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 9px 17px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px lightgreen;
+}
+.clear_button:hover {
+  background: linear-gradient(to bottom, rgb(67, 241, 67) 5%, #d9e4bdf1 100%);
+  background-color: #79cf47;
+}
+.clear_button:active {
   position: relative;
   top: 1px;
 }
