--- a/src/SelectionBar.css
+++ b/src/SelectionBar.css
@@ -1,6 +1,6 @@
 .dd {
-  width: 20%;
-  height: 100%;
+  width: 40%;
+  height: 120%;
   float: left;
   padding-bottom: 1%;
   padding-right: 2%;
@@ -54,6 +54,45 @@
   background-color: #79cf47;
 }
 .clear_button:active {
+  position: relative;
+  top: 1px;
+}
+
+.searchBar {
+  width: 30%;
+  height: 100%;
+  float: left;
+}
+.bar {
+  height: 5%;
+}
+.mazeBar {
+  width: 30%;
+  height: 100%;
+  float: left;
+}
+.maze_button {
+  float: left;
+
+  box-shadow: inset 0px 1px 0px 0px #bee2f9;
+  background: linear-gradient(to bottom, #d9dde0 5%, #cc3ae9 100%);
+  background-color: #d9dde0;
+  border: 2px solid rgb(102, 2, 105);
+  /* display:inline-block; */
+  cursor: pointer;
+  color: rgb(88, 10, 88);
+  font-family: Trebuchet MS;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 9px 17px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px cc3ae9;
+}
+.maze_button:hover {
+  background: linear-gradient(to bottom, rgb(67, 241, 67) 5%, #cc3ae9 100%);
+  background-color: #cc3ae9;
+}
+.maze_button:active {
   position: relative;
   top: 1px;
 }
