--- a/src/Grid.css
+++ b/src/Grid.css
@@ -3,6 +3,7 @@
   width: 100%;
   padding-left: 7%;
   padding-top: 1%;
+  background-color: rgba(240, 248, 255, 0.678);
 }
 .row {
   display: block;
