--- a/src/SelectionBar.css
+++ b/src/SelectionBar.css
@@ -1,6 +1,6 @@
 .dd {
-  width: 45%;
-  height: 120%;
+  width: 30%;
+  height: 100%;
   float: left;
   padding-bottom: 1%;
   padding-right: 2%;
@@ -20,9 +20,10 @@
   font-family: Trebuchet MS;
   font-size: 18px;
   font-weight: bold;
-  padding: 9px 24px;
+  padding: 9px 1%;
   text-decoration: none;
   text-shadow: 0px 1px 0px #7cacde;
+  width: 18%;
 }
 .run_button:hover {
   background: linear-gradient(to bottom, #47a4cf 5%, #d9dde0 100%);
@@ -45,9 +46,10 @@
   font-family: Trebuchet MS;
   font-size: 18px;
   font-weight: bold;
-  padding: 9px 17px;
+  padding: 9px 0.5%;
   text-decoration: none;
   text-shadow: 0px 1px 0px lightgreen;
+  width: 15%;
 }
 .clear_button:hover {
   background: linear-gradient(to bottom, rgb(67, 241, 67) 5%, #d9e4bdf1 100%);
@@ -59,17 +61,18 @@
 }
 
 .searchBar {
-  width: 40%;
+  width: 45%;
   height: 100%;
   float: left;
 }
 .bar {
-  height: 5%;
+  height: 7%;
 }
 .mazeBar {
-  width: 40%;
+  width: 45%;
   height: 100%;
   float: left;
+  padding-left: 1%;
 }
 .maze_button {
   float: left;
@@ -84,9 +87,10 @@
   font-family: Trebuchet MS;
   font-size: 18px;
   font-weight: bold;
-  padding: 9px 17px;
+  padding: 9px 1%;
   text-decoration: none;
   text-shadow: 0px 1px 0px cc3ae9;
+  width: 25%;
 }
 .maze_button:hover {
   background: linear-gradient(to bottom, rgb(119, 62, 131) 5%, #cc68e0 100%);
@@ -95,4 +99,16 @@
 .maze_button:active {
   position: relative;
   top: 1px;
+}
+.searchLabel {
+  float: left;
+  margin-top: 1%;
+  padding-right: 1%;
+  color: #09639b;
+}
+.mazeLabel {
+  float: left;
+  margin-top: 1%;
+  color: #09639b;
+  padding-right: 1%;
 }
