--- a/src/Display.css
+++ b/src/Display.css
@@ -4,27 +4,29 @@
 }
 .topbar {
   background-color: rgb(118, 205, 255);
-  margin-top: -3em;
-  height: 9em;
+
+  height: 12vh;
   overflow: hidden;
 }
 .ad {
   outline-color: rgb(101, 134, 224);
   color: white;
-  font-size: 70px;
+  font-size: 8vh;
 
   float: left;
   border-color: rgb(55, 99, 192);
-  -webkit-text-stroke: 3px rgb(94, 159, 233);
+  -webkit-text-stroke: 0.3vh rgb(94, 159, 233);
   -webkit-text-fill-color: white;
+  margin-top: 1vh;
 }
 .icon {
   float: left;
-  padding-top: 1.1em;
-  padding-left: 30%;
+  padding-top: 2.5vh;
+
   width: 5%;
   float: left;
-  font-size: 3.5em;
+  font-size: 6.5vh;
   color: white;
-  padding-left: 30%;
+  padding-left: 30vw;
+  padding-right: 1vw;
 }
